--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^2.2.0",
+    "framer-motion": "^12.5.0",
     "next": "13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
